package entity

import v1 "git.xdea.xyz/Turing/neurouter/api/neurouter/v1"

// ChatReq represents a chat request, aliased from the API proto definition.
type ChatReq v1.ChatReq

// ChatResp represents a chat response, aliased from the API proto definition.
type ChatResp v1.ChatResp

// ModelSpec represents a model specification, aliased from the API proto definition.
type ModelSpec v1.ModelSpec
